# projetoarquiteturacomp

./: .gitignore  CMakeLists.txt  README.md
progs/etapa1/: programa_etapa1.txt
progs/etapa2/: programa_etapa2_tarefa1.txt  programa_etapa2_tarefa2.txt  registradores_etapa2_tarefa2.txt
progs/etapa3/: instruções.txt
src/: config.h.in  main.cpp
src/etapa1/: etapa1.cpp  etapa1.h
src/etapa2/: etapa2.cpp
src/etapa2T1/: etapa2.cpp  etapa2.h
src/etapa2T2/: etapa2t2.cpp  etapa2t2.h
src/etapa3T1/: etapa3t1.cpp  etapa3t1.h
src/etapa3e/: etapa3e.cpp  etapa3e.h
